Calendar: Online: isOnline property

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -409,7 +409,7 @@
   "GAeRDx": "Am letzten {0}",
   "4qp50s": "Am letzten {0} in {1}",
   "oXOSPE": "Online",
-  "frhre4": "Online-Treffen",
+  "frhre4": "Online-Meeting",
   "1TNIig": "Öffnen",
   "e1Rn/k": "Ordner öffnen",
   "PVUn/c": "Ordner öffnen",
