UI: Expander button: Tooltip

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -480,7 +480,7 @@
   "NPkrjZ": "Diese Nachricht entfernen",
   "2wxgft": "Umbenennen",
   "GKjvrD": "Ordner umbenennen, spezielle Ordner setzen, mit anderen teilen",
-  "BwWIp2": "Wiederholen Sie",
+  "BwWIp2": "Wiederholung",
   "5PpIpJ": "Wiederholt sich",
   "QMiOjK": "An alle antworten",
   "i9vj3l": "An alle Empfänger dieser Nachricht antworten",
