Translation: Fix a few strings

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -403,11 +403,11 @@
   "EK1sJV": "OAuth2: Anmeldung fehlgeschlagen",
   "zga9sT": "OK",
   "fyk5zb": "Am {0}",
-  "pl68Oy": "Auf {0}. eines jeden Monats",
+  "pl68Oy": "Am {0}. jeden Monats",
   "oxf578": "Am Tag {0}",
   "aTK0Fh": "An Tagen",
   "GAeRDx": "Am letzten {0}",
-  "4qp50s": "Am letzten {0} in {1}",
+  "4qp50s": "Am letzten {0} im {1}",
   "oXOSPE": "Online",
   "frhre4": "Online-Meeting",
   "1TNIig": "Öffnen",
