--- a/app/l10n/locales/fr/messages.json
+++ b/app/l10n/locales/fr/messages.json
@@ -563,7 +563,7 @@
   "t8dIOP": "Spam",
   "KFBiPv": "Le dossier Spam n'est pas défini. S'il vous plaît aller dans les propriétés du dossier et définir Utilisation comme: Spam.",
   "klTRd9": "Préciser l'heure",
-  "LECpWm": "Vérification des sorts",
+  "LECpWm": "Vérification orthographique",
   "RfFYKi": "Favoris",
   "tXkhj/": "Début",
   "x5G8x9": "Commencer une conversation avec cette personne uniquement",
