Translation: Don't translate some protocol names

--- a/app/l10n/locales/ar/messages.json
+++ b/app/l10n/locales/ar/messages.json
@@ -4,7 +4,7 @@
   "3y7OX6": "الاسم الأخير",
   "sQv06Y": "من أجل",
   "FIkhWn": "كيلوبايت",
-  "Vbpqsd": "كيربيروس / GSSAPI",
+  "Vbpqsd": "Kerberos / GSSAPI",
   "vPemUP": "مصفوفة (Matrix)",
   "lWkKSO": "دقيقة",
   "r+ASRJ": "NTLM",
