--- a/app/l10n/locales/ga/messages.json
+++ b/app/l10n/locales/ga/messages.json
@@ -27,7 +27,7 @@
   "sQv06Y": "le haghaidh",
   "lWkKSO": "min",
   "gcfaLD": "SEIRBHÍSÍ",
-  "Vbpqsd": "Seirbhís do Chustaiméirí",
+  "Vbpqsd": "Kerberos / GSSAPI",
   "CAL6E9": "Amharc ar gach eolas",
   "byfRNP": "Aitheantas ag",
   "A0dKuk": "MD5 CRAM",
