--- a/app/l10n/locales/id/messages.json
+++ b/app/l10n/locales/id/messages.json
@@ -26,7 +26,7 @@
   "pmUArF": "Ruang kerja",
   "lWkKSO": "min",
   "gcfaLD": "STARTTLS",
-  "Vbpqsd": "Kerberos",
+  "Vbpqsd": "Kerberos / GSSAPI",
   "CAL6E9": "Teams",
   "byfRNP": "Dikirim oleh",
   "2+ExvJ": "WhatsApp",
