--- a/app/l10n/locales/th/messages.json
+++ b/app/l10n/locales/th/messages.json
@@ -32,7 +32,7 @@
   "sQv06Y": "สําหรับ",
   "lWkKSO": "นาที",
   "gcfaLD": "เริ่มต้น",
-  "Vbpqsd": "Kerberos / GSSA",
+  "Vbpqsd": "Kerberos / GSSAPI",
   "CAL6E9": "ทีม",
   "byfRNP": "อาชีพ",
   "FfzLy5": "",
