Translations: Remove backslash-n

--- a/app/l10n/locales/cs/messages.json
+++ b/app/l10n/locales/cs/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Text",
   "EbMPZJ": "Nepřidělené",
   "AvRKb/": "Zdrojový kód jádra {0} najdete na adrese # pod #.",
-  "+bnD9D": "rovnováha mezi pracovním a soukromým životem: V záhlaví okna si můžete vybrat pracovní prostor."
+  "Jp2AY/": "rovnováha mezi pracovním a soukromým životem: V záhlaví okna si můžete vybrat pracovní prostor."
 }
