--- a/app/l10n/locales/da/messages.json
+++ b/app/l10n/locales/da/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Tekst",
   "EbMPZJ": "Ikke tildelt",
   "AvRKb/": "Du kan finde kildekoden til {0} core på # under en #.",
-  "+bnD9D": "Din balance mellem arbejde og privatliv: Slå nogle konti fra i perioder for at fokusere eller slappe af.\\nDu kan vælge arbejdsområde i vinduesoverskriften."
+  "Jp2AY/": "Din balance mellem arbejde og privatliv: Slå nogle konti fra i perioder for at fokusere eller slappe af. Du kan vælge arbejdsområde i vinduesoverskriften."
 }
