--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Text",
   "EbMPZJ": "Nicht zugewiesen",
   "AvRKb/": "Den Quellcode von {0} core finden Sie unter # unter einem #.",
-  "+bnD9D": "Ihre Work-Life-Balance: Schalten Sie einige Konten stumm, um sich zu konzentrieren oder zu entspannen.\\nSie können den Arbeitsbereich in der Kopfzeile des Fensters auswählen."
+  "Jp2AY/": "Ihre Work-Life-Balance: Schalten Sie einige Konten stumm, um sich zu konzentrieren oder zu entspannen. Sie können den Arbeitsbereich in der Kopfzeile des Fensters auswählen."
 }
