--- a/app/l10n/locales/en/messages.json
+++ b/app/l10n/locales/en/messages.json
@@ -658,5 +658,5 @@
   "23+T2s": "Your microphones",
   "q8yluz": "Your name",
   "9TO8nT": "Your password",
-  "+bnD9D": "Your work-life balance: Mute some accounts at times to focus or relax.\\nYou can choose the workspace in the window header."
+  "Jp2AY/": "Your work-life balance: Mute some accounts at times to focus or relax. You can choose the workspace in the window header."
 }
