--- a/app/l10n/locales/es/messages.json
+++ b/app/l10n/locales/es/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Texto",
   "EbMPZJ": "Sin asignar",
   "AvRKb/": "Puede encontrar el código fuente de {0} core en # bajo un #.",
-  "+bnD9D": "Tu equilibrio entre trabajo y vida privada: Silencia algunas cuentas a veces para concentrarte o relajarte.\\NPuedes elegir el espacio de trabajo en la cabecera de la ventana."
+  "Jp2AY/": "Tu equilibrio entre trabajo y vida privada: Silencia algunas cuentas a veces para concentrarte o relajarte. Puedes elegir el espacio de trabajo en la cabecera de la ventana."
 }
