--- a/app/l10n/locales/fi/messages.json
+++ b/app/l10n/locales/fi/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Teksti",
   "EbMPZJ": "Käyttämätön",
   "AvRKb/": "Löydät {0} ytimen lähdekoodin osoitteesta # osoitteesta #.",
-  "+bnD9D": "Työ- ja yksityiselämän tasapaino: \\nVoit valita työtilan ikkunan otsikosta."
+  "Jp2AY/": "Työ- ja yksityiselämän tasapaino: Voit valita työtilan ikkunan otsikosta."
 }
