--- a/app/l10n/locales/fr/messages.json
+++ b/app/l10n/locales/fr/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Texte",
   "EbMPZJ": "Non attribué",
   "AvRKb/": "Vous pouvez trouver le code source de {0} core à l'adresse # sous un #.",
-  "+bnD9D": "L'équilibre entre vie professionnelle et vie privée : Mettez certains comptes en sourdine pour vous concentrer ou vous détendre. Vous pouvez choisir l'espace de travail dans l'en-tête de la fenêtre."
+  "Jp2AY/": "L'équilibre entre vie professionnelle et vie privée : Mettez certains comptes en sourdine pour vous concentrer ou vous détendre. Vous pouvez choisir l'espace de travail dans l'en-tête de la fenêtre."
 }
