--- a/app/l10n/locales/hu/messages.json
+++ b/app/l10n/locales/hu/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Szöveg",
   "EbMPZJ": "Nem kijelölt",
   "AvRKb/": "A {0} core forráskódja megtalálható a # alatt egy #.",
-  "+bnD9D": "A munka és a magánélet egyensúlya: Időnként némítson el néhány fiókot, hogy koncentrálni vagy pihenni tudjon.\\nAz ablak fejlécében kiválaszthatja a munkaterületet."
+  "Jp2AY/": "A munka és a magánélet egyensúlya: Időnként némítson el néhány fiókot, hogy koncentrálni vagy pihenni tudjon. Az ablak fejlécében kiválaszthatja a munkaterületet."
 }
