--- a/app/l10n/locales/id/messages.json
+++ b/app/l10n/locales/id/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Teks",
   "EbMPZJ": "Tidak ditugaskan",
   "AvRKb/": "Anda dapat menemukan kode sumber {0} core di # di bawah tanda #.",
-  "+bnD9D": "Keseimbangan kehidupan kerja Anda: Membisukan beberapa akun pada saat tertentu untuk fokus atau bersantai.\\nAnda dapat memilih ruang kerja di tajuk jendela."
+  "Jp2AY/": "Keseimbangan kehidupan kerja Anda: Membisukan beberapa akun pada saat tertentu untuk fokus atau bersantai. Anda dapat memilih ruang kerja di tajuk jendela."
 }
