--- a/app/l10n/locales/it/messages.json
+++ b/app/l10n/locales/it/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Testo",
   "EbMPZJ": "Non assegnato",
   "AvRKb/": "Il codice sorgente di {0} core è disponibile all'indirizzo # sotto un #.",
-  "+bnD9D": "L'equilibrio tra lavoro e vita privata: È possibile scegliere l'area di lavoro nell'intestazione della finestra."
+  "Jp2AY/": "L'equilibrio tra lavoro e vita privata: È possibile scegliere l'area di lavoro nell'intestazione della finestra."
 }
