--- a/app/l10n/locales/ja/messages.json
+++ b/app/l10n/locales/ja/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "テキスト",
   "EbMPZJ": "未指定",
   "AvRKb/": "{0} coreのソースコードは#の下にあります。",
-  "+bnD9D": "ワークライフバランス：集中したいときやリラックスしたいときは、いくつかのアカウントをミュートにしてください。"
+  "Jp2AY/": "ワークライフバランス：集中したいときやリラックスしたいときは、いくつかのアカウントをミュートにしてください。"
 }
