--- a/app/l10n/locales/nl/messages.json
+++ b/app/l10n/locales/nl/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Tekst",
   "EbMPZJ": "Niet toegewezen",
   "AvRKb/": "Je kunt de broncode van {0} core vinden op # onder een #.",
-  "+bnD9D": "De balans tussen werk en privé: Je kunt de werkruimte kiezen in de koptekst van het venster."
+  "Jp2AY/": "De balans tussen werk en privé: Je kunt de werkruimte kiezen in de koptekst van het venster."
 }
