--- a/app/l10n/locales/pl/messages.json
+++ b/app/l10n/locales/pl/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Tekst",
   "EbMPZJ": "Nieprzypisany",
   "AvRKb/": "Kod źródłowy rdzenia {0} można znaleźć pod adresem #.",
-  "+bnD9D": "Równowaga między pracą a życiem prywatnym: Wycisz niektóre konta, aby się skupić lub zrelaksować. Możesz wybrać obszar roboczy w nagłówku okna."
+  "Jp2AY/": "Równowaga między pracą a życiem prywatnym: Wycisz niektóre konta, aby się skupić lub zrelaksować. Możesz wybrać obszar roboczy w nagłówku okna."
 }
