--- a/app/l10n/locales/pt/messages.json
+++ b/app/l10n/locales/pt/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Texto",
   "EbMPZJ": "Não atribuído",
   "AvRKb/": "Pode encontrar o código fonte do núcleo {0} em # under an #.",
-  "+bnD9D": "O equilíbrio entre a vida profissional e pessoal: Silencie algumas contas para se concentrar ou relaxar.\\nPode escolher o espaço de trabalho no cabeçalho da janela."
+  "Jp2AY/": "O equilíbrio entre a vida profissional e pessoal: Silencie algumas contas para se concentrar ou relaxar. Pode escolher o espaço de trabalho no cabeçalho da janela."
 }
