--- a/app/l10n/locales/ro/messages.json
+++ b/app/l10n/locales/ro/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Text",
   "EbMPZJ": "Neatribuit",
   "AvRKb/": "Puteți găsi codul sursă al {0} core la # sub un #.",
-  "+bnD9D": "Echilibrul dintre viața profesională și cea privată: Dezactivați uneori unele conturi pentru a vă concentra sau pentru a vă relaxa.\\nPuteți alege spațiul de lucru în antetul ferestrei."
+  "Jp2AY/": "Echilibrul dintre viața profesională și cea privată: Dezactivați uneori unele conturi pentru a vă concentra sau pentru a vă relaxa. Puteți alege spațiul de lucru în antetul ferestrei."
 }
