--- a/app/l10n/locales/ru/messages.json
+++ b/app/l10n/locales/ru/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Текст",
   "EbMPZJ": "Нераспределенный",
   "AvRKb/": "Исходный код ядра {0} можно найти по адресу # под #.",
-  "+bnD9D": "Баланс между работой и личной жизнью: Временами отключайте звук в некоторых аккаунтах, чтобы сосредоточиться или расслабиться.\\nВы можете выбрать рабочее пространство в заголовке окна."
+  "Jp2AY/": "Баланс между работой и личной жизнью: Временами отключайте звук в некоторых аккаунтах, чтобы сосредоточиться или расслабиться. Вы можете выбрать рабочее пространство в заголовке окна."
 }
