--- a/app/l10n/locales/sk/messages.json
+++ b/app/l10n/locales/sk/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Text",
   "EbMPZJ": "Nepriradené",
   "AvRKb/": "Zdrojový kód jadra {0} nájdete na adrese # pod #.",
-  "+bnD9D": "Vaša rovnováha medzi pracovným a súkromným životom: V záhlaví okna si môžete vybrať pracovný priestor."
+  "Jp2AY/": "Vaša rovnováha medzi pracovným a súkromným životom: V záhlaví okna si môžete vybrať pracovný priestor."
 }
