--- a/app/l10n/locales/sv/messages.json
+++ b/app/l10n/locales/sv/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Text",
   "EbMPZJ": "Ej tilldelad",
   "AvRKb/": "Du kan hitta källkoden för {0} core på # under en #.",
-  "+bnD9D": "Balans mellan arbete och fritid: Stäng av vissa konton ibland för att fokusera eller koppla av.\\nDu kan välja arbetsyta i fönsterhuvudet."
+  "Jp2AY/": "Balans mellan arbete och fritid: Stäng av vissa konton ibland för att fokusera eller koppla av. Du kan välja arbetsyta i fönsterhuvudet."
 }
