--- a/app/l10n/locales/tr/messages.json
+++ b/app/l10n/locales/tr/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Metin",
   "EbMPZJ": "Atanmamış",
   "AvRKb/": "{0} çekirdeğinin kaynak kodunu # adresinde bir # altında bulabilirsiniz.",
-  "+bnD9D": "İş-yaşam dengeniz: Odaklanmak veya rahatlamak için zaman zaman bazı hesapların sesini kapatın.\\nPencere başlığından çalışma alanını seçebilirsiniz."
+  "Jp2AY/": "İş-yaşam dengeniz: Odaklanmak veya rahatlamak için zaman zaman bazı hesapların sesini kapatın. Pencere başlığından çalışma alanını seçebilirsiniz."
 }
