--- a/app/l10n/locales/uk/messages.json
+++ b/app/l10n/locales/uk/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Текст",
   "EbMPZJ": "Не призначено",
   "AvRKb/": "Ви можете знайти вихідний код ядра {0} за адресою # під знаком #.",
-  "+bnD9D": "Баланс між роботою та особистим життям: Іноді вимикайте звук деяких облікових записів, щоб зосередитися або розслабитися.\\nВи можете вибрати робочу область у заголовку вікна."
+  "Jp2AY/": "Баланс між роботою та особистим життям: Іноді вимикайте звук деяких облікових записів, щоб зосередитися або розслабитися. Ви можете вибрати робочу область у заголовку вікна."
 }
