--- a/app/l10n/locales/zh/messages.json
+++ b/app/l10n/locales/zh/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "文本",
   "EbMPZJ": "未分配",
   "AvRKb/": "您可以在 # 下找到{0} core 的源代码。",
-  "+bnD9D": "平衡工作与生活：您可以在窗口标题中选择工作区。"
+  "Jp2AY/": "平衡工作与生活：您可以在窗口标题中选择工作区。"
 }
