--- a/app/l10n/locales/el/messages.json
+++ b/app/l10n/locales/el/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "Κείμενο",
   "EbMPZJ": "Μη ανατεθείσα",
   "AvRKb/": "Μπορείτε να βρείτε τον πηγαίο κώδικα του {0} core στη διεύθυνση # κάτω από ένα #.",
-  "+bnD9D": "Η ισορροπία μεταξύ επαγγελματικής και προσωπικής ζωής: \\nΜπορείτε να επιλέξετε το χώρο εργασίας στην κεφαλίδα του παραθύρου."
+  "Jp2AY/": "Η ισορροπία μεταξύ επαγγελματικής και προσωπικής ζωής:  Μπορείτε να επιλέξετε το χώρο εργασίας στην κεφαλίδα του παραθύρου."
 }
