--- a/app/l10n/locales/ko/messages.json
+++ b/app/l10n/locales/ko/messages.json
@@ -658,5 +658,5 @@
   "xeiujy": "텍스트",
   "EbMPZJ": "할당되지 않음",
   "AvRKb/": "{0} core의 소스 코드는 # 아래 #에서 찾을 수 있습니다.",
-  "+bnD9D": "일과 삶의 균형: 집중하거나 휴식을 취할 때 일부 계정을 음소거하세요.\\n창 헤더에서 작업 공간을 선택할 수 있습니다."
+  "Jp2AY/": "일과 삶의 균형: 집중하거나 휴식을 취할 때 일부 계정을 음소거하세요. 창 헤더에서 작업 공간을 선택할 수 있습니다."
 }
