Translations: German, French: For some ambiguous words, manually fix the translation

--- a/app/l10n/locales/fr/messages.json
+++ b/app/l10n/locales/fr/messages.json
@@ -661,17 +661,17 @@
   "ymWJLd": "Afficher {0} plus",
   "HU04WJ": "{0} montré",
   "j8KjCV": "{0} non lu",
-  "Eujij+": "Changer pour accepter",
-  "b8sT8Y": "Changement à la baisse",
-  "13+YMX": "Passer à Peut-être",
-  "qYphD0": "Passer à Peut-être",
+  "Eujij+": "Changer pour Accepter",
+  "b8sT8Y": "Changer pour Refuser",
+  "13+YMX": "Changer pour Peut-être",
+  "qYphD0": "Changer pour Peut-être",
   "wdsHj2": "Confirmer",
   "yUk/eJ": "Confirmé",
   "a92hN0": "Déclin",
   "qm+KOP": "Refusé",
   "0yBTx+": "Peut-être",
   "AISKpy": "Lire",
-  "DUVslT": "Lire",
+  "DUVslT": "Lu",
   "yDuwOx": "Règles",
   "T86TE2": "Envoyer",
   "K9+i3z": "Non lu"
