--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -665,14 +665,14 @@
   "b8sT8Y": "Wechsel zu Decline",
   "13+YMX": "Ändern in Vielleicht",
   "qYphD0": "Ändern in Vielleicht",
-  "wdsHj2": "Bestätigen Sie",
+  "wdsHj2": "Bestätigen",
   "yUk/eJ": "Bestätigt",
   "a92hN0": "Rückgang",
   "qm+KOP": "Abgelehnt",
   "0yBTx+": "Vielleicht",
-  "AISKpy": "Lesen Sie",
-  "DUVslT": "Lesen Sie",
+  "AISKpy": "Lesen",
+  "DUVslT": "Gelesen",
   "yDuwOx": "Regeln",
-  "T86TE2": "Senden Sie",
+  "T86TE2": "Senden",
   "K9+i3z": "Ungelesen"
 }
