Translation: German: Meet: Startpage: Better translation

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -275,9 +275,9 @@
   "TL52aU": "Keine Authentifizierung",
   "/jVpt2": "Keine Konfiguration gefunden",
   "MN3kMz": "Keine Verschlüsselung",
-  "KcHJl8": "Keine Meetings verfügbar",
+  "KcHJl8": "Keine Meetings geplant",
   "s5TEfW": "Keine Person gefunden",
-  "YfG4Wm": "Keine vorherigen Besprechungen",
+  "YfG4Wm": "Bisher keine Besprechungen",
   "t2prdI": "Keine Suchergebnisse",
   "r/FDxa": "keine",
   "b1LcPS": "Nicht heruntergeladen",
@@ -711,9 +711,9 @@
   "J/GeHU": "Galerieoptionen anzeigen",
   "t+u4FJ": "Sprecher anzeigen",
   "kNDewA": "Nur Sprecher",
-  "EIHmz/": "Ein Treffen vortäuschen",
+  "EIHmz/": "Ein Treffen simulieren",
   "VTZrFQ": "Wir danken Ihnen für Ihren Kauf.",
-  "W2nQ8i": "Vorschaubilder",
+  "W2nQ8i": "An der Seite",
   "ecUA8p": "Heute",
   "c2Tb8U": "Sie können Ihren Bildschirm nicht freigeben",
   "BAiPZB": "Kamera/Mikrofon lässt sich nicht starten",
