Calendar: Tweak repeat label in English

--- a/app/l10n/locales/en-GB/messages.json
+++ b/app/l10n/locales/en-GB/messages.json
@@ -377,7 +377,7 @@
   "EK1sJV": "OAuth2: Login failed",
   "zga9sT": "OK",
   "fyk5zb": "On {0}",
-  "pl68Oy": "On {0}. of every month",
+  "pl68Oy": "On day {0} of every month",
   "oxf578": "On day {0}",
   "aTK0Fh": "On days",
   "bXCP9f": "On the {0} {1}",
