Translation: German: Discard: Not Ablegen, but Verwerfen

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -683,7 +683,7 @@
   "ShFa5x": "Wählen Sie, welche Anwendungen Sie verwenden möchten",
   "Tv+dsC": "Gesamte Serie löschen",
   "IygP/o": "Rest der Serie löschen",
-  "bzSI52": "Ablegen",
+  "bzSI52": "Verwerfen",
   "Iws5jW": "Gefunden {0} Ereignisse",
   "U+kFad": "Galerie",
   "fv2V8g": "Hand hoch",
