Translation: German: Fix siehe -> angezeigt

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -645,7 +645,7 @@
   "0tN18q": "Nur den aktuell angezeigten Ordner nach einem Stichwort durchsuchen",
   "bSEyIL": "Nur diesen Ordner durchsuchen",
   "ymWJLd": "{0} mehr anzeigen",
-  "HU04WJ": "{0} siehe",
+  "HU04WJ": "{0} angezeigt",
   "j8KjCV": "{0} ungelesen",
   "Eujij+": "Ändern in Akzeptieren",
   "13+YMX": "Ändern in Vielleicht",
