Fix escapes for "> Quote"

--- a/app/l10n/locales/bg/messages.json
+++ b/app/l10n/locales/bg/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Подзаглавие",
   "1ctNn0": "### Sub sub header",
   "sLOsVx": "<p>\n      Целите на срещата са:\n      <ol>\n        <li>Преглед на спецификациите на UX за приложението Meet</li>\n        <li>Обсъждане на обратната връзка</li>\n        <li>Вземане на решение дали да се продължи</li>\n        <li>Следващи стъпки</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Цитат",
+  "67dlFh": "> Цитат",
   "uZcwp0": "1. Артикул",
   "gLzjMR": "4 седмици",
   "J6ypuD": "A",
