--- a/app/l10n/locales/et/messages.json
+++ b/app/l10n/locales/et/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Alapealkiri",
   "1ctNn0": "### Sub sub sub header",
   "sLOsVx": "<p>\n      Kohtumise eesmärgid on järgmised:\n      <ol>\n        <li>Meet appi UX-spetsifikaatide läbivaatamine.</li>\n        <li>Tagasiside arutelu</li>\n        <li>otsus, kas jätkata</li>\n        <li>Järgmised sammud</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Tsitaat",
+  "67dlFh": "> Tsitaat",
   "uZcwp0": "1. Objekt",
   "gLzjMR": "4 nädalat",
   "J6ypuD": "A",
