--- a/app/l10n/locales/id/messages.json
+++ b/app/l10n/locales/id/messages.json
@@ -24,7 +24,7 @@
   "sB+V2m": "## Sub tajuk",
   "1ctNn0": "################### Sub sub header",
   "sLOsVx": "<p>\nTujuan dari pertemuan adalah:\n<ol>\n<li> Tampilan spesifikasi UX untuk Memenuhi aplikasi</li>\n<li>Penjelasan umpan balik</li>\n<li>Decision apakah untuk melanjutkan</li>\n<li> Langkah selanjutnya </li>\n</ol>\n</p>",
-  "67dlFh": "&gt; Kutipan",
+  "67dlFh": "> Kutipan",
   "uZcwp0": "1. Artikel Artikel",
   "gLzjMR": "4 Minggu",
   "J6ypuD": "A",
