--- a/app/l10n/locales/lt/messages.json
+++ b/app/l10n/locales/lt/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Dalinė antraštė",
   "1ctNn0": "#### Sub sub antraštė",
   "sLOsVx": "<p>\n      Susitikimo tikslai:\n      <ol>\n        <li>Programėlės \"Meet\" UX specifikacijų peržiūra</li>\n        <li>grįžtamojo ryšio aptarimas</li>\n        <li>Sprendimas, ar tęsti darbą</li>\n        <li>Tolesni veiksmai</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Citata",
+  "67dlFh": "> Citata",
   "uZcwp0": "1. Prekė",
   "gLzjMR": "4 savaitės",
   "J6ypuD": "A",
