--- a/app/l10n/locales/lv/messages.json
+++ b/app/l10n/locales/lv/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Apakšvirsraksts",
   "1ctNn0": "#### Apakšvirsraksts",
   "sLOsVx": "<p>\n      Sanāksmes mērķi:\n      <ol>\n        <li>Apskatīt lietotnes Meet UX specifikāciju.</li>\n        <li>Atgriezeniskās saites apspriešana</li>\n        <li>Lēmums par turpmāko rīcību.</li>\n        <li>Turpmākie soļi</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Citāts",
+  "67dlFh": "> Citāts",
   "uZcwp0": "1. Prece",
   "gLzjMR": "4 nedēļas",
   "J6ypuD": "A",
