--- a/app/l10n/locales/zh-Hant/messages.json
+++ b/app/l10n/locales/zh-Hant/messages.json
@@ -28,7 +28,7 @@
   "sB+V2m": "## 子標題",
   "1ctNn0": "### 副標題",
   "sLOsVx": "<p>\n      會議的目標是：\n      <ol>\n        <li>檢視 Meet 應用程式的 UX 規格</li>\n        <li>討論回饋意見</li>\n        <li>決定是否繼續</li>\n        <li>接下來的步驟</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; 報價",
+  "67dlFh": "> 報價",
   "uZcwp0": "1.項目",
   "wnBiDr": "2x2 = 4",
   "2AvHLb": "3x3 = 9",
