--- a/app/l10n/locales/en-GB/messages.json
+++ b/app/l10n/locales/en-GB/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Sub header",
   "1ctNn0": "### Sub sub header",
   "sLOsVx": "<p>\n      Objectives of the meeting are:\n      <ol>\n        <li>Review of the UX specs for Meet app</li>\n        <li>Discussion of feedback</li>\n        <li>Decision whether to proceed</li>\n        <li>Next steps</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Quote",
+  "67dlFh": "> Quote",
   "uZcwp0": "1. Item",
   "gLzjMR": "4 Weeks",
   "J6ypuD": "A",
