--- a/app/l10n/locales/nb/messages.json
+++ b/app/l10n/locales/nb/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Underoverskrift",
   "1ctNn0": "### Sub sub sub header",
   "sLOsVx": "<p>\n      Målene med møtet er\n      <ol>\n        <li>Gjennomgang av UX-spesifikasjonene for Meet-appen</li>\n        <li>Diskusjon av tilbakemeldinger</li>\n        <li>Beslutning om hvorvidt vi skal gå videre</li>\n        <li>Neste skritt</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Sitat",
+  "67dlFh": "> Sitat",
   "uZcwp0": "1. Artikkel",
   "gLzjMR": "4 uker",
   "J6ypuD": "A",
