--- a/app/l10n/locales/sl/messages.json
+++ b/app/l10n/locales/sl/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Podnaslov",
   "1ctNn0": "#### Podnaslov podnaslova",
   "sLOsVx": "<p>\n      Cilji srečanja so:\n      <ol>\n        <li>Pregled specifikacij UX za aplikacijo Meet</li>\n        <li>razprava o povratnih informacijah</li>\n        <li>Odločitev, ali naj se nadaljuje</li>\n        <li>Naslednji koraki</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Citat",
+  "67dlFh": "> Citat",
   "uZcwp0": "1. Postavka",
   "gLzjMR": "4 tedne",
   "J6ypuD": "A",
