Fix "Drag&drop" translations being escaped

--- a/app/l10n/locales/lv/messages.json
+++ b/app/l10n/locales/lv/messages.json
@@ -185,8 +185,8 @@
   "1dT23A": "Vai vēlaties apvienot abus kontaktus, t. i., nokopēt datus no otra kontakta šajā kontaktā un dzēst otru kontaktu?",
   "Kijdjh": "Lejupielādēt visus ziņojumus",
   "M8kJqa": "Projekti",
-  "jbn1NM": "Drag&amp;drop neizdevās: Izvēlētā ziņojuma ID neatbilst vilkšanas datiem",
-  "s5yuMA": "Drag&amp;drop neizdevās: Izvēlētā ziņojuma ID nesakrīt ar vilkšanas datiem",
+  "jbn1NM": "Drag&drop neizdevās: Izvēlētā ziņojuma ID neatbilst vilkšanas datiem",
+  "s5yuMA": "Drag&drop neizdevās: Izvēlētā ziņojuma ID nesakrīt ar vilkšanas datiem",
   "lkz6PL": "Ilgums",
   "ePK91l": "Rediģēt",
   "Oo7//P": "Rediģēt projektu",
