--- a/app/l10n/locales/et/messages.json
+++ b/app/l10n/locales/et/messages.json
@@ -185,8 +185,8 @@
   "1dT23A": "Kas soovite 2 kontakti ühendada, st kopeerida teise kontakti andmed sellesse kontakti ja kustutada teine kontakt?",
   "Kijdjh": "Lae alla kõik sõnumid",
   "M8kJqa": "Eelnõud",
-  "jbn1NM": "Drag&amp;drop ebaõnnestus: Valitud sõnumi ID ei vasta lohistamise andmetele.",
-  "s5yuMA": "Drag&amp;drop ebaõnnestus: Valitud sõnumi ID-d ei vasta lohistamise andmetele.",
+  "jbn1NM": "Drag&drop ebaõnnestus: Valitud sõnumi ID ei vasta lohistamise andmetele.",
+  "s5yuMA": "Drag&drop ebaõnnestus: Valitud sõnumi ID-d ei vasta lohistamise andmetele.",
   "lkz6PL": "Kestus",
   "ePK91l": "Muuda",
   "Oo7//P": "Eelnõu muutmine",
