--- a/app/l10n/locales/lt/messages.json
+++ b/app/l10n/locales/lt/messages.json
@@ -185,8 +185,8 @@
   "1dT23A": "Ar norite sujungti 2 kontaktus, t. y. nukopijuoti kito kontakto duomenis į šį kontaktą ir ištrinti kitą kontaktą?",
   "Kijdjh": "Atsisiųsti visus pranešimus",
   "M8kJqa": "Projektai",
-  "jbn1NM": "\"Drag&amp;drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
-  "s5yuMA": "\"Drag&amp;drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
+  "jbn1NM": "\"Drag&drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
+  "s5yuMA": "\"Drag&drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
   "lkz6PL": "Trukmė",
   "ePK91l": "Redaguoti",
   "Oo7//P": "Redaguoti projektą",
