Translations: Fix ">" and "&" escaping (#614) (#633)
* Fix escapes for "> Quote"
* Fix "Drag&drop" translations being escaped

--- a/app/l10n/locales/en-GB/messages.json
+++ b/app/l10n/locales/en-GB/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Sub header",
   "1ctNn0": "### Sub sub header",
   "sLOsVx": "<p>\n      Objectives of the meeting are:\n      <ol>\n        <li>Review of the UX specs for Meet app</li>\n        <li>Discussion of feedback</li>\n        <li>Decision whether to proceed</li>\n        <li>Next steps</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Quote",
+  "67dlFh": "> Quote",
   "uZcwp0": "1. Item",
   "gLzjMR": "4 Weeks",
   "J6ypuD": "A",
@@ -185,8 +185,8 @@
   "1dT23A": "Do you want to merge the 2 contacts, i.e. copy the data from the other contact into this contact, and delete the other contact?",
   "Kijdjh": "Download all messages",
   "M8kJqa": "Drafts",
-  "jbn1NM": "Drag&amp;drop failed: Selected message ID doesn't match the drag data",
-  "s5yuMA": "Drag&amp;drop failed: Selected message IDs don't match the drag data",
+  "jbn1NM": "Drag&drop failed: Selected message ID doesn't match the drag data",
+  "s5yuMA": "Drag&drop failed: Selected message IDs don't match the drag data",
   "lkz6PL": "Duration",
   "ePK91l": "Edit",
   "Oo7//P": "Edit draft",
