--- a/app/l10n/locales/et/messages.json
+++ b/app/l10n/locales/et/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Alapealkiri",
   "1ctNn0": "### Sub sub sub header",
   "sLOsVx": "<p>\n      Kohtumise eesmärgid on järgmised:\n      <ol>\n        <li>Meet appi UX-spetsifikaatide läbivaatamine.</li>\n        <li>Tagasiside arutelu</li>\n        <li>otsus, kas jätkata</li>\n        <li>Järgmised sammud</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Tsitaat",
+  "67dlFh": "> Tsitaat",
   "uZcwp0": "1. Objekt",
   "gLzjMR": "4 nädalat",
   "J6ypuD": "A",
@@ -185,8 +185,8 @@
   "1dT23A": "Kas soovite 2 kontakti ühendada, st kopeerida teise kontakti andmed sellesse kontakti ja kustutada teine kontakt?",
   "Kijdjh": "Lae alla kõik sõnumid",
   "M8kJqa": "Eelnõud",
-  "jbn1NM": "Drag&amp;drop ebaõnnestus: Valitud sõnumi ID ei vasta lohistamise andmetele.",
-  "s5yuMA": "Drag&amp;drop ebaõnnestus: Valitud sõnumi ID-d ei vasta lohistamise andmetele.",
+  "jbn1NM": "Drag&drop ebaõnnestus: Valitud sõnumi ID ei vasta lohistamise andmetele.",
+  "s5yuMA": "Drag&drop ebaõnnestus: Valitud sõnumi ID-d ei vasta lohistamise andmetele.",
   "lkz6PL": "Kestus",
   "ePK91l": "Muuda",
   "Oo7//P": "Eelnõu muutmine",
