--- a/app/l10n/locales/lt/messages.json
+++ b/app/l10n/locales/lt/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Dalinė antraštė",
   "1ctNn0": "#### Sub sub antraštė",
   "sLOsVx": "<p>\n      Susitikimo tikslai:\n      <ol>\n        <li>Programėlės \"Meet\" UX specifikacijų peržiūra</li>\n        <li>grįžtamojo ryšio aptarimas</li>\n        <li>Sprendimas, ar tęsti darbą</li>\n        <li>Tolesni veiksmai</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Citata",
+  "67dlFh": "> Citata",
   "uZcwp0": "1. Prekė",
   "gLzjMR": "4 savaitės",
   "J6ypuD": "A",
@@ -185,8 +185,8 @@
   "1dT23A": "Ar norite sujungti 2 kontaktus, t. y. nukopijuoti kito kontakto duomenis į šį kontaktą ir ištrinti kitą kontaktą?",
   "Kijdjh": "Atsisiųsti visus pranešimus",
   "M8kJqa": "Projektai",
-  "jbn1NM": "\"Drag&amp;drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
-  "s5yuMA": "\"Drag&amp;drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
+  "jbn1NM": "\"Drag&drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
+  "s5yuMA": "\"Drag&drop\" nepavyko: Pasirinkto pranešimo ID neatitinka vilkimo duomenų",
   "lkz6PL": "Trukmė",
   "ePK91l": "Redaguoti",
   "Oo7//P": "Redaguoti projektą",
