--- a/app/l10n/locales/lv/messages.json
+++ b/app/l10n/locales/lv/messages.json
@@ -25,7 +25,7 @@
   "sB+V2m": "## Apakšvirsraksts",
   "1ctNn0": "#### Apakšvirsraksts",
   "sLOsVx": "<p>\n      Sanāksmes mērķi:\n      <ol>\n        <li>Apskatīt lietotnes Meet UX specifikāciju.</li>\n        <li>Atgriezeniskās saites apspriešana</li>\n        <li>Lēmums par turpmāko rīcību.</li>\n        <li>Turpmākie soļi</li>\n      </ol>\n    </p>",
-  "67dlFh": "&gt; Citāts",
+  "67dlFh": "> Citāts",
   "uZcwp0": "1. Prece",
   "gLzjMR": "4 nedēļas",
   "J6ypuD": "A",
@@ -185,8 +185,8 @@
   "1dT23A": "Vai vēlaties apvienot abus kontaktus, t. i., nokopēt datus no otra kontakta šajā kontaktā un dzēst otru kontaktu?",
   "Kijdjh": "Lejupielādēt visus ziņojumus",
   "M8kJqa": "Projekti",
-  "jbn1NM": "Drag&amp;drop neizdevās: Izvēlētā ziņojuma ID neatbilst vilkšanas datiem",
-  "s5yuMA": "Drag&amp;drop neizdevās: Izvēlētā ziņojuma ID nesakrīt ar vilkšanas datiem",
+  "jbn1NM": "Drag&drop neizdevās: Izvēlētā ziņojuma ID neatbilst vilkšanas datiem",
+  "s5yuMA": "Drag&drop neizdevās: Izvēlētā ziņojuma ID nesakrīt ar vilkšanas datiem",
   "lkz6PL": "Ilgums",
   "ePK91l": "Rediģēt",
   "Oo7//P": "Rediģēt projektu",
