--- a/app/l10n/locales/fr/messages.json
+++ b/app/l10n/locales/fr/messages.json
@@ -800,7 +800,7 @@
   "GgTY5U": "{num, plural, one {minute} other {minutes}}",
   "3aHaM3": "Toutes les",
   "Xhyc0J": "Le {0} {1}",
-  "YZT8K4": "Le {0} {1} dans {2}",
+  "YZT8K4": "Le {0} {1} de {2}",
   "ebMGPp": "premier",
   "A346wK": "quatrième",
   "1itj2S": "dernier",
