--- a/app/l10n/locales/it/messages.json
+++ b/app/l10n/locales/it/messages.json
@@ -800,7 +800,7 @@
   "GgTY5U": "{num, plural, one {minuto} other {minuti}}",
   "3aHaM3": "Ogni",
   "Xhyc0J": "Il {0} {1}",
-  "YZT8K4": "Il {0} {1} in {2}",
+  "YZT8K4": "Il {0} {1} di {2}",
   "ebMGPp": "primo",
   "A346wK": "quarto",
   "1itj2S": "ultimo",
