Translation: Calendar: n. day

--- a/app/l10n/locales/cs/messages.json
+++ b/app/l10n/locales/cs/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "dne {0}",
   "ejAsSa": "{0} {1} ve {0}třetí středu v měsíci",
   "2gNchH": "v {0} {1} v {2} dnech",
-  "Rial2z": "{0}tého",
+  "Rial2z": "{0}.",
   "Bq+WB0": "na"
 }
