--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -814,10 +814,10 @@
   "z8nTcS": "Jede Woche",
   "pcEURL": "Jedes Jahr",
   "eaDCFM": "und",
-  "s/q0bH": "auf",
+  "s/q0bH": "am",
   "vUn1dM": "am {0}",
   "ejAsSa": "am {0} {1}",
   "2gNchH": "am {0} {1} in {2}",
-  "Rial2z": "am {0}ten",
-  "Bq+WB0": "an"
+  "Rial2z": "am {0}.",
+  "Bq+WB0": "bis"
 }
