--- a/app/l10n/locales/el/messages.json
+++ b/app/l10n/locales/el/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "στις {0}",
   "ejAsSa": "την {0} {1}",
   "2gNchH": "στις {0} {1} {2}",
-  "Rial2z": "την {0}η",
+  "Rial2z": "την {0}.",
   "Bq+WB0": "στο"
 }
