--- a/app/l10n/locales/es/messages.json
+++ b/app/l10n/locales/es/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "el {0}",
   "ejAsSa": "el {0} {1}",
   "2gNchH": "el {0} {1} en {2}",
-  "Rial2z": "el {0}ésimo",
+  "Rial2z": "el {0}.",
   "Bq+WB0": "a"
 }
