--- a/app/l10n/locales/fi/messages.json
+++ b/app/l10n/locales/fi/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "{0}",
   "ejAsSa": "{0} {1}",
   "2gNchH": "{0} {1} vuonna {2}",
-  "Rial2z": "{0}:ntenä päivänä",
+  "Rial2z": "{0}. päivänä",
   "Bq+WB0": "osoitteeseen"
 }
