--- a/app/l10n/locales/fr/messages.json
+++ b/app/l10n/locales/fr/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "le {0}",
   "ejAsSa": "le {0} {1}",
   "2gNchH": "le {0} {1} dans {2}",
-  "Rial2z": "le {0}e",
+  "Rial2z": "le {0}.",
   "Bq+WB0": "à"
 }
