--- a/app/l10n/locales/hu/messages.json
+++ b/app/l10n/locales/hu/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "{0}",
   "ejAsSa": "{0} {1}",
   "2gNchH": "a {0} {1} {2} {0} {1} napján {2}",
-  "Rial2z": "a {0}...}...{0}...}...{0}...}",
+  "Rial2z": "a {0}.",
   "Bq+WB0": "a  címre"
 }
