--- a/app/l10n/locales/it/messages.json
+++ b/app/l10n/locales/it/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "il {0}",
   "ejAsSa": "il {0} {1}",
   "2gNchH": "il {0} {1} in {2}",
-  "Rial2z": "il {0}esimo",
+  "Rial2z": "il {0}.",
   "Bq+WB0": "a"
 }
