--- a/app/l10n/locales/lt/messages.json
+++ b/app/l10n/locales/lt/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "liepos {0} d.",
   "ejAsSa": "{0} {1} {0} {1}trečiadienio trečiadienį",
   "2gNchH": "{0} {1} per {2}",
-  "Rial2z": "{0}-ą dieną",
+  "Rial2z": "{0}. dieną",
   "Bq+WB0": "į"
 }
