--- a/app/l10n/locales/lv/messages.json
+++ b/app/l10n/locales/lv/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "{0}",
   "ejAsSa": "{0} {1} {0}",
   "2gNchH": "{0} {1} {0} {1} in {2}",
-  "Rial2z": "{0}-tajā datumā",
+  "Rial2z": "{0}. datumā",
   "Bq+WB0": "uz"
 }
