--- a/app/l10n/locales/nl/messages.json
+++ b/app/l10n/locales/nl/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "op {0}",
   "ejAsSa": "op de {0} {1}",
   "2gNchH": "op de {0} {1} in {2}",
-  "Rial2z": "op de {0}ste",
+  "Rial2z": "op de {0}.",
   "Bq+WB0": "naar"
 }
