--- a/app/l10n/locales/ru/messages.json
+++ b/app/l10n/locales/ru/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "на {0}",
   "ejAsSa": "в {0} {1}",
   "2gNchH": "в {0} {1} в {2}",
-  "Rial2z": "на {0}-й",
+  "Rial2z": "на {0}.",
   "Bq+WB0": "на"
 }
