--- a/app/l10n/locales/sk/messages.json
+++ b/app/l10n/locales/sk/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "dňa {0}",
   "ejAsSa": "v {0} {1}tretí deň v mesiaci",
   "2gNchH": "v {0} {1} v {2}",
-  "Rial2z": "{0}teho dňa",
+  "Rial2z": "dňa {0}.",
   "Bq+WB0": "na"
 }
