--- a/app/l10n/locales/sl/messages.json
+++ b/app/l10n/locales/sl/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "dne {0}",
   "ejAsSa": "na {0} {1} {0} {1}.",
   "2gNchH": "na {0} {1} v {2}",
-  "Rial2z": "na {0}ti dan",
+  "Rial2z": "na {0}.",
   "Bq+WB0": "na"
 }
