--- a/app/l10n/locales/sv/messages.json
+++ b/app/l10n/locales/sv/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "den {0}",
   "ejAsSa": "den {0} {1}",
   "2gNchH": "den {0} {1} i {2}",
-  "Rial2z": "den {0}:e",
+  "Rial2z": "den {0}.",
   "Bq+WB0": "till"
 }
