--- a/app/l10n/locales/bg/messages.json
+++ b/app/l10n/locales/bg/messages.json
@@ -818,6 +818,6 @@
   "vUn1dM": "на {0}.",
   "ejAsSa": "на {0} {1} третата седмица от месеца",
   "2gNchH": "на {0} {1} в {2}",
-  "Rial2z": "на {0}-тия ден",
+  "Rial2z": "на {0}.",
   "Bq+WB0": "на"
 }
