Translations: German: Fix Sharing

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -922,6 +922,6 @@
   "hcwzjK": "Sie haben nur Zugriff auf den Posteingang dieses gemeinsamen Kontos",
   "dLbP+p": "Ihr Zugang zu den Mails Ihrer Kollegen",
   "cBefvc": "Ihr Kollege muss Ihnen Zugang gewährt haben",
-  "0WrNoA": "Gemeinsame Nutzung von",
+  "0WrNoA": "Teilen",
   "dsQ9ks": "Gemeinsame Nutzung"
 }
