IMAP: Sharing outgoing: Don't show settings category when not enabled on IMAP server #949

--- a/app/l10n/locales/de/messages.json
+++ b/app/l10n/locales/de/messages.json
@@ -896,7 +896,7 @@
   "ckeCn5": "Erlauben Sie Ihrem Kollegen den Zugriff auf Ihre Mails",
   "RAMaAx": "Eingehend",
   "AvTwXJ": "Postanschrift Ihres Kollegen",
-  "O0Z2Xr": "Ausgehend von",
+  "O0Z2Xr": "Ausgehend",
   "lipleT": "Personen, die Zugang zu Ihren Mails haben",
   "xUhP9p": "Wählen Sie die Personen aus, die Zugriff auf Ihre Mails, Ihren Kalender und Ihre Kontakte haben, oder greifen Sie auf deren Mails zu.",
   "SFV9+a": "Sie greifen nicht auf andere Konten zu",
